--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
-  <title>My Page</title>
+  <title>Yashdeep's Webpage</title>
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 
 <body>
