--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
-  <title>Yashdeep's Webpage</title>
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <title>My Page</title>
+  <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <div class="header">
+  <div class="header container-fluid">
     <h>Yashdeep Wagh</h>
   </div>
   <ul>
@@ -33,13 +33,13 @@
 
 
       <li class="nav">
-        <a href="#">
+        <a href="#pla">
           <div class="navbar col-xs-4" id="contact">Contact</div>
         </a>
       </li>
 
     </div>
   </ul>
-  <div><img src="http://i.imgur.com/fvxUNoa.jpg" /></div>
+  <div><img class="img-responsive" src="http://i.imgur.com/fvxUNoa.jpg" /></div>
   <div id="place"></div>
 </body>
