--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-  <title>My Page</title>
-  <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+  <title>Yashdeep's Page</title>
+  <link href="http://fonts.googleapis.com/css?family=Lobster /css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 
 
       <li class="nav">
-        <a href="#pla">
+        <a href="#place">
           <div class="navbar col-xs-4" id="contact">Contact</div>
         </a>
       </li>
