--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
   <title>Yashdeep's Page</title>
-  <link href="http://fonts.googleapis.com/css?family=Lobster /css/main.css" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+  <link href="/css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
