--- a/index.html
+++ b/index.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
 <head>
-  <title>Yashdeep's Page</title>
-  <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+  <title>Yashdeep's Portfolio</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="/css/main.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
-<body>
-  <div class="header container-fluid">
-    <h>Yashdeep Wagh</h>
-  </div>
-  <ul>
-    <div>
 
-      <li class="nav">
-        <a href="#">
-          <div class="navbar col-xs-4" id="home">Home </div>
-        </a>
-      </li>
-
-
-      <li class="nav">
-        <a href="#">
-          <div class="navbar col-xs-4" id="about">About</div>
-        </a>
-      </li>
-
-
-      <li class="nav">
-        <a href="#">
-          <div class="navbar col-xs-4" id="port">Portfolio</div>
-        </a>
-      </li>
-
-
-      <li class="nav">
-        <a href="#place">
-          <div class="navbar col-xs-4" id="contact">Contact</div>
-        </a>
-      </li>
-
+<body background="http://netdna.webdesignerdepot.com/uploads/2012/10/featured47%40wdd2x.jpg">
+  <div class="container-fluid">
+    <nav class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>                        
+          </button>
+          <a class="navbar-brand" href="#home"><span class="white">Yashdeep Wagh</span></a>
+        </div>
+        <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li><a class="text-center" href="#home">Home</a></li>
+            <li><a class="text-center" href="#about">About</a></li>
+            <li><a class="text-center" href="#portfolio">Portfolio</a></li>
+            <li><a class="text-center" href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div id="home">
+      <h1 class="text-center">Yashdeep Wagh</h1>
+      <h2 class="text-center">Lorem Ipsum</h2>
     </div>
-  </ul>
-  <div><img class="img-responsive" src="http://i.imgur.com/fvxUNoa.jpg" /></div>
-  <div id="place"></div>
+    <div class="row" id="about">
+      <div class="col-md-6 col-xs-6">Placeholder</div>
+      <div class="col-md-6 col-xs-6">Placeholder</div>
+    </div>
+    <div id="portfolio"></div>
+    <div id="contact"></div>
+  </div>
 </body>
