--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
+<style>
+  #home>h1{
+  position:relative;
+  color:black;
+  font-size:5em;
+  margin-top:25%;
+}
+
+.white:hover {
+  color: gray;
+}
+
+.white {
+  color: white;
+}
+
+body {
+  padding-top: 70px;
+}
+</style>
+
 <head>
   <title>Yashdeep's Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/css/main.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
